# overengineered-todo-cli-app

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  tempCodeRunnerFile.cpp  todo.cpp
.github/workflows/: ci.yml
helpers/: example.py  todo.cpp
include/: task.h  todoapp.h
src/: main.cpp  task.cpp  todoapp.cpp
src/legacy/: todo.cpp
tests/: test_task.cpp
